# sloth-clipboard

./: Cargo.toml  LICENSE  README.md  cp
src/: main.rs  template
