[package]
name = "funes"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "2.1.1"
crossterm = "0.25"
hyper = { version = "0.14", features = ["full"] }
local-ip-address = "0.4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tui = "0.19"